name:            pcap
version:         0.5
license:         BSD3
license-file:    LICENSE
synopsis:        A system-independent interface for user-level packet capture
description:     A system-independent interface for user-level packet capture
maintainer:      Bryan O'Sullivan <bos@serpentine.com>
author:          Bryan O'Sullivan, Nick Burlett, Dominic Steinitz, Gregory Wright (original author)
homepage:        https://github.com/bos/pcap
bug-reports:     https://github.com/bos/pcap/issues
category:        Network
cabal-version:   >= 1.8
extra-source-files:
                 configure.ac configure include/pcapconfig.h.in
                 pcap.buildinfo.in README.markdown CHANGELOG.md
                 examples/example.hs
extra-tmp-files: config.log config.status
build-type:      Configure

-- Don't build the examples by default, so that people don't end up
-- with the 'pcap-example' executable on their path unless they ask
-- for it.
flag build-the-examples
  default: False
  manual: True

library
  build-depends: base < 5, bytestring >= 0.9, network, time
  if impl(ghc >= 6.10)
    build-depends: base >= 4

  exposed-modules: Network.Pcap.Base
                   Network.Pcap
  extensions:      ForeignFunctionInterface, CPP
  ghc-options:     -Wall -funbox-strict-fields

  include-dirs:    include
  includes:        pcapconfig.h pcap.h
  install-includes: pcapconfig.h

source-repository head
  type:     git
  location: git://github.com/bos/pcap.git

source-repository head
  type:     mercurial
  location: https://bitbucket.org/bos/pcap

executable pcap-example
  if !flag(build-the-examples)
    buildable: False
  hs-source-dirs: examples
  main-is: example.hs
  build-depends: base, pcap, bytestring, async
  ghc-options: -Wall -threaded
